# MotorsVideojocs

./: App.cpp  App.h  CMakeLists.txt  C_Mesh.h  C_Texture.h  C_Transform.cpp  C_Transform.h  Log.cpp  Log.h  Math.h  Module.cpp  Module.h  ModuleAssets.cpp  ModuleAssets.h  ModuleCamera.cpp  ModuleCamera.h  ModuleEditor.cpp  ModuleEditor.h  ModuleRenderer.cpp  ModuleWindow.cpp  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  gl_utils.cpp  main.cpp  vcpkg.json
ecs/: C_Mesh.cpp  C_Texture.cpp  Component.h
rendering/: DebugDraw.h
src/: ModuleCamera.cpp  ModuleInput.cpp  ModuleInput.h  ModuleModels.cpp  ModuleModels.h  ModuleRenderer.cpp  ModuleRenderer.h  ModuleTextures.cpp  ModuleTextures.h  ModuleWindow.cpp  ModuleWindow.h  Time.cpp  Time.h
src/ecs/: GameObject.cpp  GameObject.h
src/rendering/: Shader.cpp  Shader.h  gl_utils.h
